--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* imports */
 @font-face {
-    font-family: Inter-Regular ;
+    font-family: Inter-Regular;
     src: url(../assets/fonts/Inter/static/Inter-Regular.ttf);
 }
 
@@ -10,7 +10,7 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: Inter-Regular;
     font-size: 16px;
     color: white;
@@ -22,20 +22,17 @@ body{
 
 /********************* Header *********************/
 header {
-    position: fixed; /* apenas para referência dos menus */
+    position: fixed;
+    /* apenas para referência dos menus */
     top: 0;
     left: 0;
-
     display: flex;
     align-items: center;
     width: 100%;
     height: 60px;
     padding: 0 10px;
-    /* background-color: #1B1426; */
     background-image: linear-gradient(to right, #1B1426);
     font-size: 16px;
-
-     /*border: 1px solid red;  referência apagar */
 }
 
 header .container-grid {
@@ -51,7 +48,7 @@ header label {
 
 
 /* esconde os elementos desnecessários no mobile */
-header .header-top,  
+header .header-top,
 header h1 .title,
 .mostra-esconde-icones,
 header #mostra-esconde-navmenu,
@@ -65,74 +62,114 @@ header .header-bottom {
     align-items: center;
 }
 
+header .header-bottom #logotipo {
+    width: 120px;
+}
+
+
+
+/* mostra esconde menu social */
+header #mostra-esconde-navmenu:checked~.nav-bkg {
+    left: 1px;
+}
+
 header .nav-bkg {
     position: fixed;
     top: 60px;
-    left: 0;
-
+    left: -300px;
     width: 270px;
-    height: 100%;
-    padding: 2px;
-
+    height: calc(100vh - 60px);/* apagar */
+    padding: 1px;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, .3), rgba(255, 255, 255, .05));
     transition: left 0.4s;
+    border-radius: 5px;
+    /* border: 2px solid yellow; */
 }
 
 .header nav {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
-
     width: 100%;
     height: 100%;
-    
-    font-size: 14px;
-    
+    font-size: 12px;
     background-image: linear-gradient(to right bottom, rgba(27, 20, 38, .5), rgba(27, 20, 38, .05));
     backdrop-filter: blur(5px);
-    
+    border-radius: 5px;
 }
 
 .header nav a {
     display: flex;
     justify-content: center;
     align-items: center;
-    
     width: 100%;
     height: 50px;
     padding: 40px 0;
-    
     color: white;
     font-family: Inter-Regular;
     text-decoration: none;
-    
+    cursor: pointer;
     border-bottom: 2px solid #F9AA01;
+    transition: background-color .4s;
 }
 
-.header nav a:first-of-type {
-    color: #F9AA01;
+.header nav a:hover {
+    background-color: #F9AA01;
+    border-bottom: 2px solid #1B1426;
 }
 
-header nav .social-box {}
+/* aqui depois trocar para o link:active */
+.header nav a:last-of-type {
+    border-bottom: none;
+}
 
-/* mostra esconde icones header */
-header #mostra-esconde-icones:checked ~ .icons-header-bkg {
+/* formatação nos dois últimos links - contato */
+.header nav a.phone-box,
+.header nav a.mail-box {
+    font-size: 10px;
+}
+
+.header nav a.phone-box>img,
+.header nav a.mail-box>img {
+    width: 18px;
+    margin-right: 10px;
+    font-size: 10px;
+}
+
+
+.header nav .social-box {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    /* border: 1px solid red; */
+}
+
+.header nav .social-box img {
+    margin-right: 25px;
+}
+
+
+
+
+
+/* mostra esconde menu social */
+header #mostra-esconde-icones:checked~.icons-header-bkg {
     right: 1px;
 }
-/* menu social */
+
+/* Menu social do cabeçalho */
 header .icons-header-bkg {
     position: absolute;
     top: 60px;
     right: -70px;
-
     width: 66px;
     height: 170px;
     padding: 1px;
-    /* background-color: transparent; */
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, .2), rgba(255, 255, 255, .05));
-    /* backdrop-filter: blur(10px); */
-    /* opacity: .5; */
+    border-radius: 5px;
     transition: right 0.4s;
 }
 
@@ -141,14 +178,12 @@ header .icons-header {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
     width: 100%;
     height: 100%;
     padding: 20px;
-
-    /* background-color: rgba(27, 20, 38, .9);  */
     background-image: linear-gradient(to right bottom, rgba(27, 20, 38, .5), rgba(27, 20, 38, .05));
     backdrop-filter: blur(2px);
+    border-radius: 5px;
 }
 
 header .icons-header img {
@@ -163,5 +198,4 @@ header .icons-header img {
     background-image: url(../images/Banner_Liga-Game-Mobile.png);
     background-size: cover;
     background-repeat: none;
-
 }
