--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,15 @@ body {
 
 /* Mobiel First */
 
+/* Generals */
+#back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+
+
 /********************* Header *********************/
 header {
     position: fixed;
@@ -329,7 +338,7 @@ section.progamer .progamer-flex {
 section.progamer h2 {
     width: 100%;
     margin-bottom: 20px;
-    font-family: TitilliumWeb-SemiBold;
+    font-family: TitilliumWeb-Black;
     font-size: 1.7rem;
     color: black;
     text-align: center;
@@ -365,10 +374,6 @@ section.progamer .progamer-flex .gamers #professores {
     top: 110px;
     left: 0;
 }
-
-
-
-
 
 section.progamer .gamers .card-bkg .card-jogos {
     display: flex;
@@ -471,6 +476,7 @@ section.noticias .card-noticia p {
 footer {
     padding: 40px 20px;
     background-color: #1B1426;
+    background-image: url(../images/backgroung_footer.png);
     box-shadow: inset 0 30px 20px rgba(0, 0, 0, 0.8);
 }
 
