--- a/css/login.css
+++ b/css/login.css
@@ -279,14 +279,16 @@ header .icons-header img {
     padding: 1px;
     border: 1px solid white;
     border-radius: 8px;
+    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, .5), rgba(27, 20, 38, .05));
 }
 
 .frm-login {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    flex-direction: column;
+    /* justify-content: flex-start; */
+    align-items: center;
     flex-wrap: wrap;
-    padding: 60px 20px;
+    padding: 35px 20px;
     /* border: 2px solid yellow; */
     height: 100%;
 }
@@ -294,17 +296,20 @@ header .icons-header img {
 .frm-login .login-title {
     width: 100%;
     text-align: center;
+    margin-bottom: 60px;
+
 }
 
 .frm-login .login-title hr {
     width: 30%;
     margin: 0 auto;
+    margin-bottom: 20px;
     border: 2px solid #F9AA01;
 }
 
 .frm-login .frm-linha {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     background-image: linear-gradient(to right, rgba(255, 255, 255, .4), rgba(255, 255, 255, 0.1));
     border-radius: 10px;
 }
@@ -334,7 +339,15 @@ header .icons-header img {
 
 
 
-
+.frm-login .btn-logar {
+    width: 100%;
+    height: 40px;
+    font-family: TitilliumWeb-SemiBold;
+    font-size: 1.5rem;
+    background-color: #F9AA01;
+    border-radius: 8px;
+    border: 1px solid #F9AA01;
+}
 
 
 
