--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,8 @@ footer {
     padding: 40px 20px;
     background-color: #1B1426;
     background-image: url(../images/backgroung_footer.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     box-shadow: inset 0 30px 60px rgba(0, 0, 0, 0.8);
 }
 
