--- a/css/footer.css
+++ b/css/footer.css
@@ -2,12 +2,21 @@
 
 /********************* Footer *********************/
 footer {
+    position: relative;
+
     padding: 40px 20px;
     background-color: #1B1426;
     background-image: url(../images/backgroung_footer.png);
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: inset 0 30px 60px rgba(0, 0, 0, 0.8);
+}
+
+footer #back-to-top {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    width: 25px;
 }
 
 footer .footer-flex {
@@ -178,6 +187,10 @@ footer #copyright {
     footer .footer-flex {
         flex-direction: row;
         align-items: flex-start;
+    }
+
+    footer #back-to-top {
+        width: 35px;
     }
 
     footer .card-ftitem-box {
